[package]
name = "molz4me"
version = "0.1.0"
authors = ["Raffael Zica <1042414+SirJson@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozlz4 = "0.3"
structopt = "0.3"
termcolor = "1.1"
atty = "0.2"
clap = "2.33"